Overflow issue on mobile fix

--- a/src/Components/Main/Styles/_index.scss
+++ b/src/Components/Main/Styles/_index.scss
@@ -13,6 +13,7 @@
 .main {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   &__top {
     display: inline-flex;
